# event-radar-ai

./: .commitlintrc.json  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  biome.json  bootstrap.sh  compose.yaml  env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: commitlint.yml  semantic-release.yml
core/: Dockerfile  README.md  pyproject.toml
core/src/core/: __main__.py  database.py  main.py  settings.py
core/src/core/alembic/: alembic.ini  env.py  script.py.mako
core/src/core/alembic/versions/: 9349c3b866c3_create_initial_tables.py  a89a422dd59b_add_linkedin_models_with_enums.py  b8f2c3d4e5a6_cascade_delete_posts.py
core/src/core/logger/: __init__.py  levels.py  logger.py
core/src/core/middlewares/: user.py
core/src/core/misc/: __init__.py  uptime.py
core/src/core/models/: __init__.py  keyword.py  linkedin_profile.py  linkedin_search.py  linkedin_signal.py  post.py  profile.py  serializer.py  signal.py  user.py
core/src/core/routers/: __init__.py  auth.py  dashboard.py  health.py  profiles.py  searches.py  signals.py  users.py
core/src/core/scheduler/: __init__.py  jobs.py
core/src/core/schemas/: __init__.py  auth.py  dashboard.py  profiles.py  searches.py  signals.py
core/src/core/security/: __init__.py  password.py  token.py
core/src/core/services/: __init__.py  linkedin_scraper.py  llm.py  phantombuster.py
core/src/core/services/prompts/: signal_extraction.md
core/tests/: test_health.py
docs/: POC.md
docs/features/: README.md  phase-1-foundation.md  phase-2-phantombuster.md  phase-3-llm-extraction.md  phase-4-api-endpoints.md  phase-5-background-jobs.md  phase-6-frontend.md
scripts/: clean-cache.sh  clean-node.sh  code-quality-checkers.sh  update-package-version.sh
webapp/: Dockerfile  README.md  index.html  package.json  tsconfig.json
webapp/src/: App.tsx  main.tsx  styles.css
webapp/src/api/: auth.ts  client.ts  dashboard.ts  profiles.ts  searches.ts  signals.ts
webapp/src/components/: Layout.tsx  Navbar.tsx  ProtectedRoute.tsx
webapp/src/components/profiles/: ProfileCard.tsx  ProfileForm.tsx
webapp/src/components/searches/: SearchCard.tsx  SearchForm.tsx
webapp/src/components/signals/: SignalCard.tsx  SignalFilters.tsx
webapp/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  switch.tsx  tooltip.tsx
webapp/src/hooks/: useAuth.ts  useDashboard.ts  useProfiles.ts  useSearches.ts  useSignals.ts
webapp/src/pages/: About.tsx  Dashboard.tsx  Login.tsx  Profiles.tsx  Searches.tsx  Signals.tsx
