[project]
dependencies = []
name = "event-radar-ai"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.0"

[dependency-groups]
dev = ["jupyter>=1.1.1", "mypy>=1.17.1", "poethepoet>=0.37.0", "ruff>=0.12.10"]

[tool.ruff.lint]
ignore = [
    "C901",    # Ignore complex functions
    "COM812",  # Ignore missing comma
    "D100",    # Ignore missing docstring in public module
    "D104",    # Ignore missing docstring in public package
    "D203",    # Ignore one-blank-line after docstring
    "D213",    # Ignore multi-line docstring summary
    "ERA001",  # Ignore commented code
    "G004",    # Allow f-string in logging
    "ISC001",  # Ignore implicit string concatenation
    "PLR0911", # Ignore too many return statements
    "S101",    # Ignore use of assert statements
    "S104",    # Ignore possible binding to all interfaces
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"notebooks/**/*.ipynb" = ["ALL"]
"tests/**/*.py" = [
    "INP001", # Ignore __init__.py files in tests
    "S101",   # Allow assert statements in tests
]

[tool.ruff]
exclude = [".venv", "notebooks"]
indent-width = 4
line-length = 100

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = false
mypy_path = "stubs"
plugins = ["pydantic.mypy"]
pretty = true
show_column_numbers = true

[tool.uv.workspace]
members = ["core"]

# POE - Check format
[tool.poe.tasks.check_format]
cmd = "ruff format --check"
help = "Check code formatting."

# POE - Check lint
[tool.poe.tasks.check_lint]
cmd = "ruff check"
help = "Check code linting."

# POE - Check import sort
[tool.poe.tasks.check_sort]
cmd = "ruff check --select I"
help = "Check import sort."

# POE - Fix format
[tool.poe.tasks.fix_format]
cmd = "ruff format"
help = "Fix code formatting."

# POE - Fix sort
[tool.poe.tasks.fix_sort]
cmd = "ruff check --select I --fix"
help = "Fix import sort."

# POE - Type check
[tool.poe.tasks.type_check]
cmd = "mypy core"
help = "Check types"

# Semantic Release Configuration
[tool.semantic_release]
build_command = ""
dist_path = ""
patch_without_tag = false
remove_dist = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = ["core/pyproject.toml:project.version", "pyproject.toml:project.version"]
version_variables = []

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = ["^chore: update uv.lock", "^chore\\(release\\):"]
template_dir = "templates"

[tool.semantic_release.changelog.environment]
autoescape = true
block_end_string = "%}"
block_start_string = "{%"
comment_end_string = "#}"
comment_start_string = "{#"
extensions = []
keep_trailing_newline = false
lstrip_blocks = false
newline_sequence = "\n"
trim_blocks = false
variable_end_string = "}}"
variable_start_string = "{{"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
    "wip",
]
default_bump_level = 0
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
ignore_token_for_push = false
name = "origin"
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
